# chinese-reader

./: Cargo.toml  output.parquet
assets/: chinese.pest
assets/beginner_conversational/level1/: english1.yml  english2.yml  english3.yml
assets/beginner_conversational/level1/unit1/: chinese.pest  english.yml
assets/beginner_conversational/level1/unit2/: english.yml
assets/beginner_conversational/level2/: english1.yml  english2.yml  english3.yml  english4.yml  english5.yml
assets/beginner_conversational/level3/: english1.yml  english2.yml  english3.yml
assets/beginner_conversational/unit1/: chinese.pest  english.yml
src/: main.rs  words.rs
src/chinese/: generate_numbers.rs
src/chinese/beginner_conversational/unit1/: generate_numbers.rs
