[package]
name = "chinese-app"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7.15"
pest_derive = "2.7.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
rand = "0.9.0"
parquet = "54.2.1"
arrow = "54.2.1"
aws-sdk-s3 = "0.28"
tokio = { version = "1", features = ["full"] }